syntax = "proto3";

option go_package = "demo-grpc/proto";

package proto;

service MediaService {
    rpc GetHeadFile(FileInput) returns (FileHeader) {};
    rpc GetObjectByRange(FilePartInput) returns (FilePartObject) {};
    rpc GetPresignedUrlDownloadFile(FileInput) returns (FileDownloadUrl){};
    rpc GetPresignedUrlDownloadPartFile(LargeFileInput) returns (LargeFileResponse);
    rpc GetPresignedUrlUploadFile(FileInput) returns (FileUploadUrl){};
    rpc GetPresignedUrlUploadLargeFile(LargeFileInput) returns (LargeFileResponse){};
    rpc CompleteMultipartUpload(UploadCompleteInput) returns (UploadCompleteResponse);
    rpc AbortMultipartUpload(UploadCompleteInput) returns (UploadCompleteResponse);
    // rpc DownloadImage(ImageInfo) returns (FileUploadInfo) {}
}

message FileInput {
    string bucket = 1;
    string key = 2;
}

message FileHeader {
    int64 content_length = 1;
}

message FilePartInput {
    string bucket = 1;
    string key = 2;
    int64 range_start = 3;
    int64 range_end = 4;
    int64 part_size = 5;
}

message FilePartObject {
    bytes data = 1;
}

message FileDownloadUrl {
    string url = 1;
}

message FileUploadUrl {
    string url = 1;
}

message LargeFileInput {
    string bucket = 1;
    string key = 2;
    int64 content_length = 3;
    int64 part_size = 4;
}

message LargeFileResponse {
    string upload_id = 1;
    message  PartFile {
        string url = 1;
        int64 part_number = 2;
    }
    repeated PartFile part_file = 2;
}

message UploadCompleteInput {
    string bucket = 1;
    string key = 2;
    string upload_id = 3;
    message CompletedPart {
        string e_tag = 1;
        int64 part_number = 2;
    }
    repeated CompletedPart completed_part = 4;
}

message UploadCompleteResponse {
    string status = 1;
}

// message ImageInfo {
//     string url = 1;
// }

// message FileUploadInfo {
//     int32 id = 1;
//     int64 file_id = 2;
//     int64 file_size = 3;
//     string file_name = 4;
//     string ext = 5;
//     string mime_type = 6;
//     int64 created_time = 7;
//     int64 updated_time = 8;
// }